--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter.store",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "FastStore Base Starter",
   "private": true,
   "scripts": {
@@ -11,21 +11,19 @@
     "test": "faststore test"
   },
   "dependencies": {
-    "@faststore/core": "3.0.35",
-    "next": "^13.5.6",
+    "@faststore/cli": "3.88.5",
+    "next": "^13.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.12.1",
-    "@faststore/cli": "3.0.35",
-    "@faststore/lighthouse": "^3.0.7",
     "@lhci/cli": "^0.9.0",
     "@testing-library/cypress": "^10.0.1",
     "cypress": "12.17.4",
     "cypress-axe": "^1.5.0",
     "cypress-wait-until": "^2.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "5.3.2"
   },
   "volta": {
     "node": "18.19.0",
